--- a/modules/ext.MinervaSiteNotice2.css
+++ b/modules/ext.MinervaSiteNotice2.css
@@ -69,7 +69,8 @@
         max-height: 232px;
         padding: 0;
         padding-left: 5px;
-        white-space: nowrap;
+        white-space: normal;
+        text-wrap: pretty;
         background-color: var(--sitenotice2-background);
         backdrop-filter: var(--filter-glass);
         border-radius: var(--sitenotice2-border-radius);
